--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "application/libraries/Twig"]
 	path = application/libraries/Twig
 	url = git://github.com/fabpot/Twig.git
+[submodule "bootstrap"]
+	path = bootstrap
+	url = git://github.com/twitter/bootstrap.git
+[submodule "less"]
+	path = less
+	url = git://github.com/cloudhead/less.js.git
